--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,7 @@
 {
-    "extends": "stylelint-config-standard-scss",
+    "extends": ["stylelint-config-standard"],
     "rules": {
-        "at-rule-empty-line-before": "never",
-        "selector-class-pattern": null,
-        "rule-empty-line-before": "always"
+        "no-descending-specificity": null,
+        "selector-class-pattern": null
     }
 }
