--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "webpack serve --env port=3000",
-        "start:vite": "vite",
+        "start": "vite",
+        "start:webpack": "webpack serve --env port=3000",
         "build:dev": "webpack  --env mode=development",
         "build:prod": "webpack --env mode=production",
         "lint:ts": "eslint \"./src/**/*.{ts,tsx}\"",
@@ -58,8 +58,8 @@
         "sass": "^1.81.0",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.4",
-        "stylelint": "^16.10.0",
-        "stylelint-config-standard-scss": "^13.1.0",
+        "stylelint": "^16.15.0",
+        "stylelint-config-standard": "^37.0.0",
         "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2",
