--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "mini-css-extract-plugin": "^2.9.2",
         "prettier": "^3.4.1",
         "react-refresh": "^0.14.2",
+        "react-uuid": "^2.0.0",
         "sass": "^1.81.0",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.4",
