--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lint:scss": "npx stylelint \"**/*.scss\"",
         "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
         "prettier": "npx prettier --write **/*.{ts,tsx,json}",
-        "prepare": "husky"
+        "prepare": "husky",
+        "test:unit": "jest --config ./config/jest/jest.config.ts"
     },
     "keywords": [],
     "author": "",
@@ -29,6 +30,7 @@
         "@svgr/webpack": "^8.1.0",
         "@types/babel__core": "^7.20.5",
         "@types/circular-dependency-plugin": "^5.0.8",
+        "@types/jest": "^29.5.14",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@types/react-router-dom": "^5.3.3",
@@ -51,6 +53,9 @@
         "fork-ts-checker-webpack-plugin": "^9.0.2",
         "html-webpack-plugin": "^5.6.3",
         "husky": "^9.1.7",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-html-reporters": "^3.1.7",
         "lint-staged": "^15.2.10",
         "mini-css-extract-plugin": "^2.9.2",
         "prettier": "^3.4.1",
