--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@babel/preset-typescript": "^7.26.0",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
         "@svgr/webpack": "^8.1.0",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
         "@types/babel__core": "^7.20.5",
         "@types/circular-dependency-plugin": "^5.0.8",
         "@types/jest": "^29.5.14",
@@ -53,6 +56,7 @@
         "fork-ts-checker-webpack-plugin": "^9.0.2",
         "html-webpack-plugin": "^5.6.3",
         "husky": "^9.1.7",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-html-reporters": "^3.1.7",
