--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "react_template",
+    "name": "todos",
+    "homepage": "https://NathanBailie.github.io/test-task-todos",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
@@ -13,7 +14,8 @@
         "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
         "prettier": "npx prettier --write **/*.{ts,tsx,json}",
         "prepare": "husky",
-        "test:unit": "jest --config ./config/jest/jest.config.ts"
+        "test:unit": "jest --config ./config/jest/jest.config.ts",
+        "deploy": "gh-pages -d build"
     },
     "keywords": [],
     "author": "",
@@ -54,6 +56,7 @@
         "eslint-plugin-unused-imports": "^4.1.4",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^9.0.2",
+        "gh-pages": "^6.3.0",
         "html-webpack-plugin": "^5.6.3",
         "husky": "^9.1.7",
         "identity-obj-proxy": "^3.0.0",
